# s21_smartCalc

./: .gitmodules
src/: Doxyfile  Makefile  s21_smart_calc.c  s21_smart_calc.h  s21_stack.c
src/smart_calc_qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/tests/: s21_tests.c  s21_tests.h  s21_tests_main.c
